@@ -1,3 +1,13 @@
+2018-10-18  Jonathan Wakely  <jwakely@redhat.com>
+
+	Backport from mainline
+	2018-10-18  Jonathan Wakely  <jwakely@redhat.com>
+
+	PR libstdc++/87641
+	* include/bits/valarray_array.h (__valarray_sum): Use first element
+	to initialize accumulator instead of value-initializing it.
+	* testsuite/26_numerics/valarray/87641.cc: New test.
+
 2018-10-15  Jonathan Wakely  <jwakely@redhat.com>
 
 	* testsuite/22_locale/numpunct/members/char/3.cc: Adjust test to
